Money Manager 19.4.0
* Java toolchain upgrade to JDK-13
* Windows and OSX app installers using JDK-14
* Support for CSV account statement from Alfa Bank
* Red color added to approaching account closing day
* Modularized project