@@ -2,16 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.panteleyev</groupId>
-    <artifactId>money-manager</artifactId>
-    <version>19.3.0</version>
-    <packaging>jar</packaging>
-    <name>MoneyManager</name>
+    <groupId>org.panteleyev.money</groupId>
+    <artifactId>money-parent</artifactId>
+    <version>19.4.0</version>
+    <packaging>pom</packaging>
+    <name>Money Manager Parent</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>13</maven.compiler.source>
+        <maven.compiler.target>13</maven.compiler.target>
         <app.main.class>org.panteleyev.money.MoneyApplication</app.main.class>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
@@ -24,6 +24,12 @@
         <jsch-version>0.1.55</jsch-version>
         <gson-version>2.8.5</gson-version>
         <testng-version>6.14.3</testng-version>
+        <!-- Plugins -->
+        <mavenToolchainPluginVersion>1.1</mavenToolchainPluginVersion>
+        <mavenCompilerPluginVersion>3.8.1</mavenCompilerPluginVersion>
+        <mavenSurefirePluginVersion>3.0.0-M3</mavenSurefirePluginVersion>
+        <mavenJarPluginVersion>3.0.2</mavenJarPluginVersion>
+        <mavenDependencyPluginVersion>3.0.2</mavenDependencyPluginVersion>
         <!-- Test properties -->
         <money.test.mysql.host>localhost</money.test.mysql.host>
         <money.test.mysql.database>MoneyTestDB</money.test.mysql.database>
@@ -31,82 +37,96 @@
         <money.test.mysql.password></money.test.mysql.password>
     </properties>
 
+    <modules>
+        <module>model</module>
+        <module>persistence</module>
+        <module>ofx</module>
+        <module>statements</module>
+        <module>ymoney</module>
+        <module>application</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>persistence</artifactId>
+                <version>${persistence-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>org-panteleyev-commons-ssh</artifactId>
+                <version>${commons-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>org-panteleyev-commons-database</artifactId>
+                <version>${commons-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>org-panteleyev-commons-fx</artifactId>
+                <version>${commons-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.controlsfx</groupId>
+                <artifactId>controlsfx</artifactId>
+                <version>${controlsfx-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql-connector-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>${jsoup-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.jcraft</groupId>
+                <artifactId>jsch</artifactId>
+                <version>${jsch-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-base</artifactId>
+                <version>${javafx-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-controls</artifactId>
+                <version>${javafx-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-web</artifactId>
+                <version>${javafx-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-swing</artifactId>
+                <version>${javafx-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-media</artifactId>
+                <version>${javafx-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-csv</artifactId>
+                <version>1.7</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>persistence</artifactId>
-            <version>${persistence-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.panteleyev</groupId>
-            <artifactId>org-panteleyev-commons-ssh</artifactId>
-            <version>${commons-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.panteleyev</groupId>
-            <artifactId>org-panteleyev-commons-database</artifactId>
-            <version>${commons-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.panteleyev</groupId>
-            <artifactId>org-panteleyev-commons-fx</artifactId>
-            <version>${commons-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.controlsfx</groupId>
-            <artifactId>controlsfx</artifactId>
-            <version>${controlsfx-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-connector-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>${jsoup-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${gson-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.jcraft</groupId>
-            <artifactId>jsch</artifactId>
-            <version>${jsch-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-base</artifactId>
-            <version>${javafx-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>${javafx-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-web</artifactId>
-            <version>${javafx-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-swing</artifactId>
-            <version>${javafx-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-media</artifactId>
-            <version>${javafx-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-csv</artifactId>
-            <version>1.6</version>
-        </dependency>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -127,7 +147,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-toolchains-plugin</artifactId>
-                <version>1.1</version>
+                <version>${mavenToolchainPluginVersion}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -138,76 +158,53 @@
                 <configuration>
                     <toolchains>
                         <jdk>
-                            <version>11</version>
+                            <version>13</version>
                         </jdk>
                     </toolchains>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>${mavenCompilerPluginVersion}</version>
                 <configuration>
                     <release>11</release>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm</artifactId>
-                        <version>7.1</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
-                <configuration>
-                    <outputDirectory>target/jmods</outputDirectory>
-                    <archive>
-                        <manifestEntries>
-                            <Main-Class>${app.main.class}</Main-Class>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.0.2</version>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <includeScope>runtime</includeScope>
-                            <outputDirectory>target/jmods</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
+                <version>${mavenJarPluginVersion}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M3</version>
-                <configuration>
-                    <suiteXmlFiles>
-                        <suiteXmlFile>src/test/testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>
-                    <argLine>
-                        --add-reads org.panteleyev.persistence=org.panteleyev.money
-                        --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
-                        --add-opens javafx.graphics/javafx.scene=org.controlsfx.controls
-                        -Dmysql.host=${money.test.mysql.host}
-                        -Dmysql.user=${money.test.mysql.user}
-                        -Dmysql.password=${money.test.mysql.password}
-                        -Dmysql.database=${money.test.mysql.database}
-                    </argLine>
-                </configuration>
+                <version>${mavenSurefirePluginVersion}</version>
             </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${mavenDependencyPluginVersion}</version>
+                    <executions>
+                        <execution>
+                            <id>copy-dependencies</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>copy-dependencies</goal>
+                            </goals>
+                            <configuration>
+                                <includeScope>runtime</includeScope>
+                                <outputDirectory>target/jmods</outputDirectory>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
